Bug Fix: Inventory Add Item Input Error Handling.

--- a/Views/Orders/AddItem.cshtml
+++ b/Views/Orders/AddItem.cshtml
@@ -46,8 +46,8 @@
             <input type="hidden" name="orderId" value="@Model.order.Id">
 
             <div class="form-group">
-                <label name="itemId" class="control-label"><strong>Item Id #:</strong></label>
-                <input name="itemId" class="form-control" />
+                <label name="itemId_input" class="control-label"><strong>Item Id #:</strong></label>
+                <input name="itemId_input" class="form-control" />
             </div>
 
             <br>
